Fix bootstrap navbar size issue.
Also replace logo with cropped version to take up less space.
Refs #9521

--- a/Code/Mantid/docs/source/_static/custom.css
+++ b/Code/Mantid/docs/source/_static/custom.css
@@ -5,11 +5,6 @@
 /*-------------------- $NAV --------------------*/
 
 .navbar-version { display: none; }
-.navbar-brand {
-  margin-bottom: 15px;
-  width: 190px;
-  height: 100px;
-}
 
 /*-------------------- $LINKS --------------------*/
 
